--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "home-to-do-list",
+  "homepage": "https://localnewstv.github.io/home-to-do-list",
   "version": "0.1.0",
   "private": false,
   "dependencies": {
@@ -12,6 +13,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
