--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "home-to-do-list",
-  "homepage": "https://localnewstv.github.io/home-to-do-list",
+  "homepage": "",
   "version": "0.1.0",
   "private": false,
   "dependencies": {
